--- a/wp-content/themes/cae/assets/scss/partials/_home.scss
+++ b/wp-content/themes/cae/assets/scss/partials/_home.scss
@@ -94,7 +94,7 @@
 		display: inline-block;
 		position: relative;
 		overflow: hidden;
-		transform:translate(0,0);
+		//transform:translate(0,0);
 		backface-visibility: hidden;
 		> span:first-child {
 			opacity:1;
